# TicketPlus

./: .dockerignore  .gitignore  .gitlab-ci.yml  .markdownlint-cli2.yaml  CONTRIBUTING.md  Dockerfile  README.md  TicketPlus.docx  compose.yaml  pyproject.toml  sec1and2.docx  ticketplus.db
.Trash-1000/files/: network_test.py  tcp-cubic-0-0.pcap  tcp-cubic.cc  tcp-project.2.cc  tcp-project.cc  tcp-reno.cc
.Trash-1000/info/: Screenshot from 2026-06-10 22-52-07.png.trashinfo  Screenshot from 2026-06-10 22-52-19.png.trashinfo  Screenshot from 2026-06-10 22-54-43.png.trashinfo  Screenshot from 2026-06-10 22-54-56.png.trashinfo  Screenshot from 2026-06-10 22-58-28.2.png.trashinfo  Screenshot from 2026-06-10 22-59-50.png.trashinfo  Screenshot from 2026-06-10 23-00-23.png.trashinfo  Screenshot from 2026-06-10 23-00-49.png.trashinfo  Screenshot from 2026-06-10 23-01-09.png.trashinfo  Screenshot from 2026-06-10 23-02-04.png.trashinfo  Screenshot from 2026-06-10 23-02-24.png.trashinfo  Screenshot from 2026-06-10 23-02-47.png.trashinfo  results.png.trashinfo  (+10 more)
diagrams/: 01-use-case.puml  02-class-diagram.puml  03-sequence-booking-flow.puml  04-sequence-notification-flow.puml  05-activity-user-purchase.puml  06-activity-admin-event-creation.puml  07-component-diagram.puml  08-deployment-diagram.puml
docs/: submission-checklist.md
frontend/: app.js  index.html  styles.css
latex report/: main.fdb_latexmk  main.fls  main.tex
scripts/: package-submission.sh  seed_demo_events.py
tests/: test_catalog.py  test_checkout.py  test_events_api.py  test_http_api.py  test_reservation.py
(+100 files in other folders)
