[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ticketplus-reference"
version = "0.1.0"
description = "Executable reference implementation of TicketPlus core workflows"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["ticketplus"]

[tool.coverage.report]
fail_under = 85
show_missing = true

